# serserver

./: README.md
serserver/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.lineno  parse.cpp  parse.h  serial.cpp  serial.h  serserver.cpp
serserver/autom4te.cache/: output.1  traces.1
serserver/client/: Makefile  Makefile.am  Makefile.in  client.cpp  config.status  configure.ac  parse.h  serclient  serclient.cpp
serserver/client/.deps/: client.Po  getopts.Po  parse.Po  serclient.Po  solar.Po
serserver/client/autom4te.cache/: output.0  traces.0  traces.1
serserver/client/include/: socket.h
serserver/client/socket/: Makefile  Makefile.am  Makefile.in  socket.cpp~
serserver/client/web/: solarweb  solarweb.cpp  solarweb.cpp~
serserver/include/: serserver.h
serserver/public_html/: index.html
serserver/socket/: Makefile  Makefile.am  Makefile.in  socket.cpp
serserver/solarclient/: Makefile  Makefile.am  Makefile.in  client.cpp  client.h  config.h  config.status  configure  getopts.cpp  getopts.h  logger.cpp  logger.h  solarclient.cpp  sun.cpp  sun.h
serserver/solarclient/autom4te.cache/: requests
serserver/solarclient/socket/: Makefile  socket.cpp
serserver/solarclient/socket/.deps/: socket.Po
serserver/udev/: 44-my-devices.rules
